along with this program. If not, see <http://www.gnu.org/licenses/>.

CHANGELOG
=========

v30.0.00
--------

    Headlines

    Security

    Changes With Important Notices

    Tweaks & Additions
        System: updated SpreadsheetRenderer to support exporting data from multiple DataTables
        System: switched interface strings from Value Added License to Catalyst License
        Individual Needs: enabled viewing IN records for past students as read-only
        Messenger: enabled resending to any recipient when read receipts are off in Send Report
        Reports: updated Attendance data source to handle Off Timetable days where no attendance is taken
        Reports: prevented deletion of template assets that are not set to inactive
        Reports: added a way for tracking and displaying who last edited an asset
        Planner: added a highlight for Off Timetable students in View Lesson Plan attendance list
        Planner: added a button to access Linked Markbook from Edit Lesson Plan page
        Planner: added a highlight for Off Timetable Lessons in the "Year Overview" mode
        Staff: limited Add Staff list to users who are not already staff but have a staff role
        Staff: added an option to separate the Staff Duty page into tabs by duty type
        Students: fixed error on student profile related to a typo in studentMenuCategory variable
        System Admin: added the option to upload user photos in jpeg format
        Timetable: added coverage details for staff duty and activities on the timetable
        User Admin: added Sibling as option to Emergency Relationship select
        User Admin: added Prof. as an option in Title select

    Bug Fixes
        System: fixed toggle field direction for right-to-left languages
        Staff: fixed coverage longer than one week not including staff duty and activity cover
        Messenger: fixed missing From address on emails when using the Add Recipient action in Send Report