@@ -31,6 +31,7 @@ v30.0.00
     Tweaks & Additions
         System: updated SpreadsheetRenderer to support exporting data from multiple DataTables
         System: switched interface strings from Value Added License to Catalyst License
+        Activities: added the option for parents to register their children in activities
         Individual Needs: enabled viewing IN records for past students as read-only
         Messenger: enabled resending to any recipient when read receipts are off in Send Report
         Reports: updated Attendance data source to handle Off Timetable days where no attendance is taken
